Fix overflow issue in the footer

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     background: #eee;
     padding: 0 16px;
 }
